--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "expo": "~54.0.7",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
     "react": "19.1.0",
