--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.4.1",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
@@ -18,6 +19,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "expo": "~54.0.7",
+    "expo-font": "~14.0.8",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
@@ -27,7 +29,8 @@
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "expo-linear-gradient": "~15.0.7"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
