--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "expo": "~54.0.7",
     "expo-font": "~14.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
@@ -29,8 +30,7 @@
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-vector-icons": "^10.3.0",
-    "expo-linear-gradient": "~15.0.7"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
